--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="lib/lodash/lodash.min.js"></script>
+    <script src="lib/lodash/lodash.js"></script>
     <script src="lib/moment/min/moment.min.js"></script>
     <script src="lib/moment/locale/fr.js"></script>
 
